[tool.poetry]
name = "pab"
version = "2.0.2"
description = "A build tool for multi-projects that leverages package registries (pypi, npmjs, etc.)"
authors = ["Binh Vu <binh@toan2.com>"]
homepage = "https://github.com/binh-vu/pbt"
repository = "https://github.com/binh-vu/pbt"
readme = "README.md"
license = "MIT"
packages = [
    { include = "pbt" }
]

[tool.poetry.scripts]
pab = 'pbt.cli:cli'
pbt = 'pbt.cli:cli'

[tool.poetry.dependencies]
python = "^3.7"
orjson = "^3.6.3"
toml = "^0.10.2"
semver = "^2.13.0"
pytest-mock = "^3.6.1"
loguru = "^0.5.3"
poetry = "^1.1.8"
click = "^8.0.3"
typing-extensions = "^4.0.0"
networkx = "^2.6.3"
lbry-rocksdb-optimized = "^0.8.1"

[tool.poetry.dev-dependencies]
black = {version = "^21.11b1", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
