[tool.poetry]
name = "pab"
version = "2.6.0"
description = "A build tool for multi-projects that leverages package registries (pypi, npmjs, etc.)"
authors = ["Binh Vu <binh@toan2.com>"]
homepage = "https://github.com/binh-vu/pbt"
repository = "https://github.com/binh-vu/pbt"
readme = "README.md"
license = "MIT"
packages = [
    { include = "pbt" }
]

[tool.poetry.scripts]
pab = 'pbt.__main__:cli'
pbt = 'pbt.__main__:cli'

[tool.poetry.dependencies]
python = "^3.8"
orjson = "^3.6.8"
semver = "^2.13.0"
loguru = ">=0.6.0"
tomlkit = "^0.7.2"
click = "^8.1.3"
networkx = "^2.8.2"
lbry-rocksdb-optimized = "^0.8.1"
requests = "^2.28.0"
maturin = "^0.12.20"
typing-extensions = "^4.3.0"
poetry = "^1.2.0b2"

[tool.poetry.dev-dependencies]
pytest-mock = "^3.6.1"
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
