[tool.poetry]
name = "pbt"
version = "2.10.3"
description = "A build tool for multiple Python projects in a single repository"
authors = ["Binh Vu <binh@toan2.com>"]
homepage = "https://github.com/binh-vu/pbt"
repository = "https://github.com/binh-vu/pbt"
readme = "README.md"
license = "MIT"

[tool.poetry.scripts]
pbt = 'pbt.__main__:cli'

[tool.poetry.dependencies]
python = "^3.8"
orjson = "^3.8.0"
semver = "^2.13.0"
loguru = "^0.6.0"
tomlkit = "^0.11.5"
click = "^8.1.3"
networkx = "^2.8.2"
requests = "^2.28.0"
maturin = "^0.13.6"
typing-extensions = "^4.4.0"
poetry = "^1.2.2"
hugedict = "^2.7.1"

[tool.poetry.dev-dependencies]
pytest-mock = "^3.6.1"
pytest = "^7.1.3"
pytest-cov = "^4.0.0"
black = "^22.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
